--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+
+body {
+    background-color: #fff;
+    color: #000;
+}
+
+/* Estilos para el modo oscuro */
+body.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+
+
 /* Estilos para la barra de navegación */
 .navbar {
     display: flex;
@@ -63,3 +77,4 @@
         margin: 10px 0;
     }
 }
+
